package ch09_01;

/**
 * description: 苹果抽象类
 *
 * @author wenguoli
 * @date 2020/3/17 10:15
 */
public abstract class Apple implements IFruit {
    public abstract void get();
}
