package ch09_01;

/**
 * description: 香蕉抽象类
 *
 * @author wenguoli
 * @date 2020/3/17 10:16
 */
public abstract class Banana implements IFruit {
    public abstract void get();
}
