package ch09_01;

/**
 * description: 水果接口
 *
 * @author wenguoli
 * @date 2020/3/17 10:15
 */
public interface IFruit {
    /**
     * 获取数据
     */
    public void get();
}
