package ch09_01;

/**
 * description:
 *
 * @author wenguoli
 * @date 2020/3/17 10:18
 */
public class InnerApple extends Apple {
    @Override
    public void get() {
        System.out.println("长在室内的苹果");
    }
}
