package ch09_01;

/**
 * description:
 *
 * @author wenguoli
 * @date 2020/3/17 10:19
 */
public class InnerBanana extends Banana {
    @Override
    public void get() {
        System.out.println("长在室内的香蕉");
    }
}
