package ch09_01;

/**
 * description:
 *
 * @author wenguoli
 * @date 2020/3/17 10:23
 */
public class NorthBanana extends Banana {
    @Override
    public void get() {
        System.out.println("长在北方的香蕉");
    }
}
