package ch09_01;

/**
 * description:
 *
 * @author wenguoli
 * @date 2020/3/17 10:24
 */
public class SouthBanana extends Banana {
    @Override
    public void get() {
        System.out.println("长在南方的香蕉");
    }
}
